kubernetes/security/network/allow-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
  namespace: boutique

spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
  - Ingress

  ingress:

  # allow from same namespace
  - from:
    - podSelector: {}

  # allow from ingress controller (kube-system)
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
