kubernetes/security/network/allow-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal
  namespace: boutique

spec:
  podSelector: {}

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector: {}

  egress:
  - to:
    - podSelector: {}
    - namespaceSelector: {}
